# overshoot-python

./: .gitignore  README.md  pyproject.toml
cmd/overshoot-publisher/: go.mod  go.sum  main.go
examples/: README.md  file_source.py  frame_source.py  get_models.py  rtsp_source.py  structured_output.py
src/overshoot/: __init__.py  _api_client.py  _constants.py  _ffmpeg.py  _go_publisher.py  _http.py  _livekit_transport.py  _sources.py  _stream.py  _streams_api.py  errors.py  types.py
tests/: conftest.py  test_api_client.py  test_stream.py  test_types.py
