[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overshoot"
dynamic = ["version"]
description = "Python SDK for Overshoot real-time video analysis API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Overshoot", email = "sdk@overshoot.ai" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "aiohttp>=3.9,<4",
    "aiortc>=1.9.0",
]
keywords = ["realtime", "vision", "ai", "video", "stream", "webrtc", "computer-vision"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/Overshoot-ai/overshoot-python"
Repository = "https://github.com/Overshoot-ai/overshoot-python"
Issues = "https://github.com/Overshoot-ai/overshoot-python/issues"

[tool.hatch.version]
path = "src/overshoot/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/overshoot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.ruff]
target-version = "py310"
line-length = 99
